k8s/overlays/staging/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-mfeed-ad-jp-wordpress
spec:
  replicas: 3
  template:
    spec:
      nodeSelector:
        iam.gke.io/gke-metadata-server-enabled: "true"

      containers:
        - name: www-mfeed-ad-jp-wordpress
          volumeMounts:
            - name: mfeed-wordpress-secrets
              mountPath: /var/run/secrets/wordpress
              readOnly: true

        - name: cloud-sql-proxy
          args:
            - "--port=3306"
            - "--structured-logs"
            - "mfeed-web-staging:asia-northeast1:mfeed-web-wordpress"

      volumes:
        - name: mfeed-wordpress-secrets
          csi:
            driver: secrets-store-gke.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: mfeed-wordpress-secrets
