k8s/overlays/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
#  annotations:
#    cloud.google.com/backend-config: '{"default":"wordpress-backendconfig"}'
#    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: www-mfeed-ad-jp-wordpress
    app.kubernetes.io/environment: staging
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/part-of: mfeed-web
  name: wordpress-svc
  namespace: web-staging
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: www-mfeed-ad-jp-wordpress
    app.kubernetes.io/environment: staging
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/part-of: mfeed-web
  type: ClusterIP
