k8s/overlays/staging/patch-ingress-ipv6.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress-ipv6
  annotations:
    kubernetes.io/ingress.global-static-ip-name: wp-gclb-ipv6
spec:
  rules:
    - host: www.wp-stg.mfeed.ad.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-svc
                port:
                  number: 80
